objects/ssot__PurchaserPlanAssociation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Purchase Plan Association Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaserId__c</fullName>
        <label>Purchaser</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaserPlanId__c</fullName>
        <label>Purchaser Plan</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Role__c</fullName>
        <label>Role</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726405596_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PurchaserPlanAssociation_PurchaserPl_rel</label>
        <referenceTo>ssot__PurchaserPlan__dlm</referenceTo>
        <relationshipLabel>PurchaserPlanAssociation_PurchaserPl_rel</relationshipLabel>
        <relationshipName>rel_1716726405596_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726414701_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PurchaserPlanAssociation_PurchaserId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PurchaserPlanAssociation_PurchaserId_rel</relationshipLabel>
        <relationshipName>rel_1716726414701_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>